# windrush_story_keeper

./: .gitignore  DEVELOPER.md  README.md  follow_up_questions.md  follow_up_questions_generated.md  pyproject.toml  windrush_story_summary.md
scripts/: followup_mock.py  run_followup_ollama.py  smoke_check.sh
src/windrush_story_keeper/: crew.py  main.py
src/windrush_story_keeper/config/: agents.yaml  follow_up_questions.agent.md  tasks.yaml
